// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 2`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 3`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <svg
              class="osui-icon "
              focusable="false"
              height="1024"
              viewBox="0 0 1024 1024"
              width="1024"
            >
              <path
                d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
                fill="currentColor"
              />
            </svg>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue RTL 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl osui-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
  style="min-height: 2px;"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
    >
      <span>
        Zhejiang
      </span>
       &gt; 
      <span>
        Hangzhou
      </span>
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <svg
      class="osui-icon "
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M798.255 256L512 563.2 225.745 256 128 358.4 512 768l384-409.6z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl osui-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
  style="min-height:-Infinitypx"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        readonly=""
        role="combobox"
        style="opacity:0"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <svg
      class="osui-icon "
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M798.255 256L512 563.2 225.745 256 128 358.4 512 768l384-409.6z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="jiangsu__RC_CASCADER_SPLIT__nanjing__RC_CASCADER_SPLIT__zhonghuamen"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu / Nanjing / 
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hong Hua Men
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-value="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__West Lake"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-value="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__Xia Sha"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / Xia Sha
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should render not found content 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-2 ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-value="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  class="ant-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ant-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ant-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ant-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should show not found content when options.length is 0 1`] = `
<div
  class="ant-select-dropdown osui-cascader-menu osui-cascader-menu-0 ant-cascader-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-value="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  class="ant-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ant-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ant-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ant-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div
  class="ant-select ant-cascader osui-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
  style="min-height: 2px;"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
    >
      <span>
        Zhejiang
      </span>
       &gt; 
      <span>
        Hangzhou
      </span>
       &gt; 
      <span>
        West Lake
      </span>
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <svg
      class="osui-icon "
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M798.255 256L512 563.2 225.745 256 128 358.4 512 768l384-409.6z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;
